kubernetes/apps/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames:
    - "auuth.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
